nginx-sample/Ambiemt/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-allow-ingress-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx
  ingress:
  - ports:
    - port: 80
      protocol: TCP
